2006-09-28  Per Bothner  <per@bothner.com>

	* XTimeType.java (now): Also set TIMEZONE_MASK and hence timezone.

2006-09-14  Per Bothner  <per@bothner.com>

	* KNode.java (getNodeValue): New static methods.
	(getNodeValue): Use new method.
	* KElement.java (getAttribute, getAttributeNS, getAttributeNode,
	getAttributeNS): New implementations.
	(hasAttribute, hasAttributeNS): Optimization.
	* KAttr.java (getObjectValue): New static method.
	(getObjectValue): Use new method.
	* KProcessingInstruction.java (getNodeName): Fix copy-paste error.

	* KNode.java: Fix PreProcessing so we don't use org.w3c.dom
	except when use:org.w3c.dom.Node is selected.
	* KCharacterData.java: Likweise.
	* KElement.java: Likewise.
	* KComment.java: Likewise.
	* KAttr.java: Likewise.
	* KText.java: Likewise.
	* KCDATASection.java: Likewise.
	* KDocument.java: Likewise.
	* Nodes.java: Likewise.
	* KProcessingInstruction.java: Likewise.

	* XDataType.java (toURI): Make public.

	* AttributeAxis.java (scan): Optimize - break when no more attributes.

	* ChildAxis.java (scan): Make use of new filtering fileChildPos method.

2006-09-13  Per Bothner  <per@bothner.com>

	* KProcessingInstruction.java (getNodeType): Fix cut-and-paste error.

	* Document.java (close): New method.
	* KNode.java (toString): Add missing close call on XMLPrinter.

	* XMLParser.java (parseCached): Add missing close call on XMLParser.

2006-08-18  Per Bothner  <per@bothner.com>

	* XTimeType.java (now): New method.

2006-08-17  Per Bothner  <per@bothner.com>

	* ProcessingInstructionType.java (coerceMethod): Fix thinko.

2006-06-28  Per Bothner  <per@bothner.com>

	* NodeName.java: Update SName -> Symbol.
	* MakeElement.java: Likewise.
	* AttributeType.java (make, isInstance, coerceOrNull): Partial rewrite
	due to removla of SName class.
	* ElementType.java (make, isInstance, coerceOrNull): Likewise.
	(MATCH_ANY_LOCALNAM, MATCH_ANY_QNAME): New constant fields.

2006-06-27  Per Bothner  <per@bothner.com>
